src/rules/snapshots/pg_migration_lint__rules__pgm107__tests__alter_table_add_pk_int4_fires.snap
---
source: src/rules/pgm107.rs
expression: findings
---
- rule_id: PGM107
  severity: Major
  message: "Primary key column 'id' on 'orders' uses integer. Consider using bigint to avoid exhausting the integer range on high-write tables."
  file: migrations/002.sql
  start_line: 1
  end_line: 1
