src/rules/snapshots/pg_migration_lint__rules__pgm107__tests__inline_pk_int2_fires.snap
---
source: src/rules/pgm107.rs
expression: findings
---
- rule_id: PGM107
  severity: Major
  message: "Primary key column 'id' on 'counters' uses smallint. Consider using bigint to avoid exhausting the integer range on high-write tables."
  file: migrations/001.sql
  start_line: 1
  end_line: 1
